--- a/static/style.css
+++ b/static/style.css
@@ -11,8 +11,37 @@ a:hover{
   color: blue;
 }
 
-h1 {
+#topBarTitle {
   font-size: 2.3rem;
   font-weight: bold;
-  color: blue;
+  color: Black;
+  padding-left: 15px;
+
+}
+
+#header {
+  display: flex;
+  width: 100%;
+  background-color: #add8e6;
+  margin: 5px 5px 5px 5px;
+  margin-right: 15px;
+}
+
+.mainContent {
+  display: flex;
+  flex-direction: row;
+}
+
+#sidePanel {
+  height: 800px;
+  width: 250px;
+  background-color: #dddddd;
+  margin: 5px 5px 5px 5px;
+}
+
+#content {
+  width: 100%;
+  height: auto;
+  background-color: #add8e6;
+  margin: 5px 5px 5px 5px;
 }
