--- a/templates/website.html
+++ b/templates/website.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Recipes searcher {% endblock %}
 {% block body %}
-
+<link rel=stylesheet type=text/css href="{{ url_for('static',filename='style.css') }}">
 
 {% endblock %}
