--- a/templates/website.html
+++ b/templates/website.html
@@ -17,7 +17,7 @@
       <div>{{ form.egg}}{{form.egg.label}}</div>
       <div>{{ form.dairy}}{{form.dairy.label}}</div>
       <div>{{ form.pizza}}{{form.pizza.label}}</div>
-      <input type="submit" value="Find Recipe">
+      {{ form.submit()}}
     </div>
   </div>
 {% endblock %}
