Form redirects! (maybe works completely). Had missed 1 line of code in the html, fml

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,9 @@
 
   <body>
   <div id="header">
-    <h1 id="topBarTitle"> Standard Web Browser Tool </h1>
-    <a href="{{ url_for('results') }}"> Results </a>
+    <h1 id="topBarTitle"> Popty </h1>
+    <a href="{{ url_for('result') }}"> Results </a>
+    <a href="{{ url_for('home') }}"> Home </a>
   </div>
   <div class="mainContent">
     <div id = "sidePanel">
