--- a/static/style.css
+++ b/static/style.css
@@ -4,25 +4,42 @@ CHROME STORES STYLESHEETS
 */
 
 a {
-  color: red;
+  color: black;
+  text-decoration: none;
 }
 
 a:hover{
   color: blue;
+  text-decoration: none;
 }
 
-#topBarTitle {
-  font-size: 2.3rem;
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: auto;
+  background-color: #add8e6;
+  margin: 5px 5px 5px 5px;
+}
+
+.topBarTitle {
+  display: flex;
+  align-items: flex-start;
+  font-size: 2.6rem;
   font-weight: bold;
   color: Black;
   padding-left: 15px;
 }
-
-#header {
+.spacer{
+  width: 80%;
+}
+.homeButton{
   display: flex;
-  width: auto;
-  background-color: #add8e6;
-  margin: 5px 5px 5px 5px;
+  align-items: flex-end;
+  font-size: 2.3rem;
+  font-weight: bold;
+  color: Black;
+  padding-right: 15px;
 }
 
 .mainContent {
@@ -37,7 +54,7 @@ a:hover{
   margin: 5px 5px 5px 5px;
 }
 
-#content {
+.content {
   width: 100%;
   height: auto;
   background-color: #add8e6;
@@ -54,9 +71,23 @@ a:hover{
   flex-direction: column;
   margin-left: 15px;
 }
+#list{
+  font-size: 1.5rem;
+}
 
 .ingredients{
   display: flex;
   flex-direction: column;
   margin-left: 15px;
+  font-size: 1.5rem;
+}
+
+.button{
+  margin-top: 15px;
+  margin-left: 10px;
+}
+
+#submitButton{
+  font-size: 1.5rem;
+
 }
