--- a/templates/website.html
+++ b/templates/website.html
@@ -2,24 +2,29 @@
 {% block title %} Recipes searcher {% endblock %}
 {% block content %}
   <link rel=stylesheet type=text/css href="{{ url_for('static',filename='style.css') }}">
-  <div class="forms">
-    <form method="POST" action="">
-      <div class="countries">
-        {{form.places}}
-      </div>
-      <div class="ingredients">
-        {{ form.csrf_token }}
-        <div>{{ form.meat}}{{form.meat.label}}</div>
-        <div>{{ form.fish}}{{form.fish.label}}</div>
-        <div>{{ form.vegetable}}{{form.vegetable.label}}</div>
-        <div>{{ form.fruit}}{{form.fruit.label}}</div>
-        <div>{{ form.pasta}}{{form.pasta.label}}</div>
-        <div>{{ form.rice}}{{form.rice.label}}</div>
-        <div>{{ form.egg}}{{form.egg.label}}</div>
-        <div>{{ form.dairy}}{{form.dairy.label}}</div>
-        <div>{{ form.pizza}}{{form.pizza.label}}</div>
-        <input type=submit name="Find Recipe">
-      </div>
-    </form>
+  <div id = "sidePanel">
+    <div class="forms">
+      <form method="POST" action="">
+        <div class="countries">
+          {{form.places(id = 'list')}}
+        </div>
+        <div class="ingredients">
+          {{ form.csrf_token }}
+          <div>{{ form.meat}}{{form.meat.label}}</div>
+          <div>{{ form.fish}}{{form.fish.label}}</div>
+          <div>{{ form.vegetable}}{{form.vegetable.label}}</div>
+          <div>{{ form.fruit}}{{form.fruit.label}}</div>
+          <div>{{ form.pasta}}{{form.pasta.label}}</div>
+          <div>{{ form.rice}}{{form.rice.label}}</div>
+          <div>{{ form.egg}}{{form.egg.label}}</div>
+          <div>{{ form.dairy}}{{form.dairy.label}}</div>
+          <div>{{ form.pizza}}{{form.pizza.label}}</div>
+          <div class = "button">{{ form.submit(id = 'submitButton') }}</div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="content">
+
   </div>
 {% endblock %}
