Component 1-4 working, output not nice format currently

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,20 +30,17 @@
       <div id = "sidePanel">
         <div class="forms">
           <form method="POST" action="">
-            <div class="countries">
-              {{form.location(id = 'list')}}
-            </div>
             <div class="ingredients">
               {{ form.csrf_token }}
               <div>{{ form.meat}}{{form.meat.label}}</div>
               <div>{{ form.fish}}{{form.fish.label}}</div>
               <div>{{ form.vegetable}}{{form.vegetable.label}}</div>
               <div>{{ form.fruit}}{{form.fruit.label}}</div>
+              <div>{{ form.potato}}{{form.potato.label}}</div>
               <div>{{ form.pasta}}{{form.pasta.label}}</div>
               <div>{{ form.rice}}{{form.rice.label}}</div>
               <div>{{ form.egg}}{{form.egg.label}}</div>
               <div>{{ form.dairy}}{{form.dairy.label}}</div>
-              <div>{{ form.pizza}}{{form.pizza.label}}</div>
               <div class = "button">{{ form.submit(id = 'submitButton') }}</div>
             </div>
           </form>
