--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="topBarTitle">
-        <h1 class="topBarTitle"><a href="/"> Popty </h1></a>
+        <a href="/"><img class="logo" src=".\static\logo.png" alt="Popty_Logo"></a>
       </div>
       <div class="spacer"></div>
       <div class="homeButton">
@@ -28,6 +28,7 @@
     </header>
     <div class="mainContent">
       <div id = "sidePanel">
+        <h2 id="sidePanelTitle">Ingredients</h2>
         <div class="forms">
           <form method="POST" action="">
             <div class="ingredients">
