--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,7 @@
               <div class = "button">{{ form.submit(id = 'submitButton') }}</div>
             </div>
           </form>
+        <form>  <div class = "JSONbutton">{{ button.download(id = 'JSONButton') }}</div> </form>
         </div>
       </div>
         {% block content %}
