--- a/static/style.css
+++ b/static/style.css
@@ -111,6 +111,9 @@ header {
   font-size: 1.5rem;
 }
 
+.JSONbutton{
+  padding: 37px 0px 0px 37px;
+}
 .results{
   display: flex;
   flex-direction: column;
@@ -118,7 +121,9 @@ header {
 }
 
 .outputTitle{
+  display: flex;
   padding-left: 5px;
+  font-size: 1.5rem;
 }
 
 .output{
