--- a/templates/website.html
+++ b/templates/website.html
@@ -3,32 +3,36 @@
 {% block content %}
   <link rel=stylesheet type=text/css href="{{ url_for('static',filename='style.css') }}">
   <div class="content">
-    <div class="outut">
+    <div class="outut" itemscope itemtype="https://schema.org/Recipe">
       <div class = "TopBar">
         <div class="PageIntro">
           <h1>Found Recipes</h1>
           {% for key in machineCountry.keys() %} <!- Goes through a loop of the suggested country from machine learning to demonstrate the selected cuisine to the user-->
             {% if response.results != [] %}
-              <h3>You have got a {{ key }} dish!</h3>
+              <div >
+                <h3 itemprop="recipeCusine">You have got a {{ key }} dish!</h3>
+              </div>
             {% else %}
               <h3>{{ key }} is the best dish for what you have selected</h3>
             {% endif %}
           {% endfor %}
           {% if value == 'Please click "Find Recipe"' %}
-            <h3>This recipe finder will take in your desired ingredents and decide what county has the best food for your selection. It will then give you a recipe from the country that contains your ingredients.</h3>
+            <h3>This recipe finder will take in your desired ingredients and decide what county has the best food for your selection. It will then give you a recipe from the country that contains your ingredients.</h3>
           {% endif %}
-          <h3>Selected ingredient(s):
-            {% if value == 'Please click "Find Recipe"' %}
-              {{ value }} to begin
-            {% else %}
-              {% for key,val in value.items() %} <!- Displays ingredients the user has selected-->
-                {% if val == 1 %}
-                  {{ key }}
-                {% else %}
-                {% endif %}
-              {% endfor %}
-            {% endif %}
-          </h3>
+          <div>
+            <h3>Selected ingredient(s):
+              {% if value == 'Please click "Find Recipe"' %}
+                {{ value }} to begin
+              {% else %}  <!- Displays ingredients the user has selected-->
+                {% for key,val in value.items() %}
+                  {% if val == 1 %}
+                    <span itemprop="recipeIgredient">{{ key }}</span>
+                  {% else %}
+                  {% endif %}
+                {% endfor %}
+              {% endif %}
+            </h3>
+          </div>
         </div>
         <div class="countryImage">
           {% for key in machineCountry.keys() %}
@@ -45,13 +49,13 @@
             {% if response.results != [] %}
               {% for key in response.results %}
               <div class="output">
-                <div class="outputText">
+                <div>
                   <h3> {{ key.title }} </h3> <!- Displays details for all returned results-->
-                  <p> Ready in: {{ key.readyInMinutes }} mins </p>
-                  <p> Serves: {{ key.servings }}
-                  <p> See more about the recipe: <a href="{{ key.sourceUrl }}">{{ key.sourceUrl }}</a></p>
+                  <p> Ready in:<time itemprop="cookingTime" datetime="PT0H{{key.readyInMinutes}}M"> {{ key.readyInMinutes }}</time> mins </p>
+                  <p> Serves: <span itemprop="recipeYield"> {{ key.servings }}</span></p>
+                  <p> See more about the recipe: <a itemprop="recipeInstructions" href="{{ key.sourceUrl }}">{{ key.sourceUrl }}</a></p>
                 </div>
-                <img class="outputImage" src="https://spoonacular.com/recipeImages/{{ key.id }}-240x150.jpg" alt="{{ key.title }}" width="240" height="150">
+                <img class="outputImage" itemprop="thumbailUrl" src="https://spoonacular.com/recipeImages/{{ key.id }}-240x150.jpg" alt="{{ key.title }}" width="240" height="150">
               </div>
               {% endfor %}
             {% else %}
@@ -60,5 +64,10 @@
           {% endif %}
       </div>
     </div>
+    {% for key in machineCountry.keys() %}
+      {% if response.results != [] %}
+        <a onclick="this.href='data:text/html;charset=UTF-8,'+encodeURIComponent(document.documentElement.outerHTML)" href="#" download="website.html">Download HTML</a>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endblock %}
