--- a/templates/website.html
+++ b/templates/website.html
@@ -66,7 +66,7 @@
     </div>
     {% for key in machineCountry.keys() %}
       {% if response.results != [] %}
-        <a onclick="this.href='data:text/html;charset=UTF-8,'+encodeURIComponent(document.documentElement.outerHTML)" href="#" download="website.html">Download HTML</a>
+        <a onclick="this.href='data:text/html;charset=UTF-8,'+encodeURIComponent(document.documentElement.outerHTML)" href="#" download="html_output.html">Download HTML</a>
       {% endif %}
     {% endfor %}
   </div>
